--- a/manual/unit.tex
+++ b/manual/unit.tex
@@ -15,9 +15,9 @@ respect to the type of object they are applied to:
 
 \begin{description}
 \item[user length:] used for lengths of graphical objects like
-  positions, distances, etc.
+  positions etc.
 \item[visual length:] used for sizes of visual elements, like arrows,
-  text, etc.
+  graph symbols, axis ticks, etc.
 \item[width length:] used for line widths
 \end{description}
 
