- document new writetofile syntax - document patterns
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@812 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -170,7 +170,9 @@ The \verb|canvas| class provides the following methods:
       \newline\phantom{writetofile(}paperformat=None, 
       \newline\phantom{writetofile(}rotated=0,
       \newline\phantom{writetofile(}fittosize=0, 
-      \newline\phantom{writetofile(}margins="1 t cm")} &
+      \newline\phantom{writetofile(}margin="1 t cm",
+      \newline\phantom{writetofile(}bbox=None,
+      \newline\phantom{writetofile(}bboxenlarge="1 t pt")} &
   Writes the canvas to \texttt{filename}. Optionally a
   \texttt{paperformat} can be specified, in which case the output will
   be centered with respect to the corresponding size using the given
@@ -178,17 +180,58 @@ The \verb|canvas| class provides the following methods:
   known paper formats . Use \texttt{rotated}, if you want to center on
   a $90^\circ$ rotated version of the respective paper format. If
   \texttt{fittosize} is set, the output is additionally scaled to the
-  maximal possible size.
+  maximal possible size. Normally, the bounding box of the canvas is 
+  calculated automatically from the bounding box of its elements.
+  Alternatively, you may specify the \texttt{bbox} manually. In any
+  case, the bounding box becomes enlarged on all side by
+  \texttt{bboxenlarge}. This may be used to compensate for the
+  inability of \PyX to take the linewidths into account for the
+  calculation of the bounding box.
 \end{tabularx} 
 \medskip
 
 \section{Patterns}
 
-The \texttt{pattern} class allows the definition of patterns which may
-then be used to fill paths. The classes \texttt{pattern} and
-\texttt{canvas} differ only in their constructor and in the absence
-of a \texttt{writetofile} method in the former.
+The \texttt{pattern} class allows the definition of PostScript Tiling
+patterns (cf.\ Sect.~4.9 of the PostScript Language Reference Manual)
+which may then be used to fill paths. The classes \texttt{pattern} and
+\texttt{canvas} differ only in their constructor and in the absence of
+a \texttt{writetofile} method in the former. The \texttt{pattern}
+constructor accepts the following keyword arguments:
 
+\medskip
+\begin{tabularx}{\linewidth}{l>{\raggedright\arraybackslash}X}
+keyword&description\\
+\hline
+\texttt{painttype}&\texttt{1} (default) for coloured patterns or
+\texttt{2} for uncoloured patterns\\
+\texttt{tilingtype}&\texttt{1} (default) for constant spacing tilings
+(patterns are spaced constantly by a multiple of a device pixel),
+\texttt{2} for undistored pattern cell, whereby the spacing may vary
+by as much as one device pixel, or \texttt{3} for constant spacing and
+faster tiling which behaves as tiling type \texttt{1} but with
+additional distortion allowed to permit a more efficient
+implementation.\\
+\texttt{xstep}&desired horizontal spacing between pattern cells, use
+\texttt{None} (default) for automatic calculation from pattern
+bounding box.\\
+\texttt{ystep}&desired vertical spacing between pattern cells, use
+\texttt{None} (default) for automatic calculation from pattern
+bounding box.\\
+\texttt{bbox}&bounding box of pattern. Use \texttt{None} for an
+automatical determination of the bounding box (including an
+enlargement by $5$ pts on each side.)\\
+\texttt{trafo}&additional transformation applied to pattern or
+\texttt{None} (default). This may be used to rotate the pattern or to
+shift its phase (by a translation).
+\end{tabularx}
+\medskip
+
+After you have created a pattern instance, you define the pattern
+shape by drawing in it like in an ordinary canvas. To use the pattern,
+you simply pass the pattern instance to a \texttt{stroke},
+\texttt{fill}, \texttt{draw} or \texttt{set} method of the canvas,
+just like you would to with a colour, etc.
 
 
 
