--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -173,7 +173,7 @@ The \verb|canvas| class provides the following methods:
       \newline\phantom{writetofile(}margin="1 t cm",
       \newline\phantom{writetofile(}bbox=None,
       \newline\phantom{writetofile(}bboxenlarge="1 t pt")} &
-  Writes the canvas to \texttt{filename}. Optionally a
+  Writes the canvas to \texttt{filename}. Optionally, a
   \texttt{paperformat} can be specified, in which case the output will
   be centered with respect to the corresponding size using the given
   \texttt{margin}. See \texttt{canvas.\_paperformats} for a list of
