--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -185,7 +185,7 @@ The \verb|canvas| class provides the following methods:
   Alternatively, you may specify the \texttt{bbox} manually. In any
   case, the bounding box becomes enlarged on all side by
   \texttt{bboxenlarge}. This may be used to compensate for the
-  inability of \PyX to take the linewidths into account for the
+  inability of \PyX{} to take the linewidths into account for the
   calculation of the bounding box.
 \end{tabularx} 
 \medskip
