--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -29,6 +29,7 @@ Andr\'e Wobst \href{mailto:wobsta@users.sourceforge.net}{\url{<wobsta@users.sour
 \include{text}
 \include{box}
 \include{epsfile}
+\include{bbox}
 \include{color}
 \include{data}
 \include{graph}
