*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@820 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,8 @@ PyX
     - enlarge (was enhance) now allows selective enlargement to the left, bottom, right and top
     - output HiResBoundingBox
     - never reduce bbox upon output
+    - defered TODOs:
+      __iadd__ and inplace enlarge, transform,...
   - epsfile module:
     - new constructor signature, more in line with rest of PyX:
       epsfile(x, y, filename, **additional_args)
