--- a/CHANGES
+++ b/CHANGES
@@ -36,7 +36,7 @@ PyX
     - all length classes have now by default a quantifier 1 (instead of 0), such that,
       for instance, 5*unit.t_cm() == unit.t_cm(5)
     - default_unit now has to be set via unit.set. For instance: unit.set(defaultunit="m").
-    - convert_to is now internal function, which moreover does not longer accept tuples or lists
+    - convert_to is now an internal function, which moreover does not longer accept tuples or lists
   - bbox module:
     - new class _bbox (the former bbox) which accepts points in the constructor. This is used
       for internal purposes.
