prevent double return of intersections
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@832 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -78,6 +78,7 @@ PyX
     - allow for extern functions in addcolumn (data module)
     - just one common place for the version number
     - fix incorrect exception name MathError (path module)
+    - prevent double return of intersections for closed sub paths
     - ...
 
 0.2 (2003/01/17):
