--- a/manual/text.tex
+++ b/manual/text.tex
@@ -87,7 +87,7 @@ respectively)
 \item[Vertical box:] Usually, \TeX/\LaTeX{} expressions are handled in
 horizontal mode (so-called LR-mode in \TeX/\LaTeX; everything goes
 into a single line). You may use \verb|parbox(x)|, where \verb|x| is the
-width of the text, to switch to a multiline mode (its called vertical
+width of the text, to switch to a multiline mode (so-called vertical
 mode in \TeX/\LaTeX).
 \begin{figure}
 \centerline{\includegraphics{textvalign}}
@@ -95,11 +95,11 @@ mode in \TeX/\LaTeX).
 \label{fig:textvalign}
 \end{figure}
 \item[Vertical alignment:] \verb|valign.top|, \verb|valign.middle|,
-\verb|valign.bottom|; in horizontal mode additionally
-\verb|valign.baseline| (default); in vertical mode additionally
-\verb|valign.topbaseline| (default), \verb|valign.middlebaseline|, and
-\verb|valign.bottombaseline|; see figure~\ref{fig:textvalign} for an
-example
+\verb|valign.bottom|; when no \verb|parbox| is defined, additionally
+\verb|valign.baseline| (default); when \verb|parbox| is defined,
+additionally \verb|valign.topbaseline| (default),
+\verb|valign.middlebaseline|, and \verb|valign.bottombaseline|; see
+figure~\ref{fig:textvalign} for an example
 \item[Vertical shift:] \verb|vshift.char(lowerratio, heightstr="0")|
 (lowers the output by \verb|lowerratio| of the height of
 \verb|heightstr|), \verb|vshift.bottomzero=vshift.char(0)| (doesn't
