include necessary files for distribution
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@851 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -9,7 +9,8 @@ PyX
       - separate texter out of the axispainter
       - 3d graphs
   - canvas module:
-      default patterns
+      - default patterns
+      - stroke and fill should support trafos
 
 0.3 (2003/03/31)
   - examples
