fix minor confusion between width and height
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/branches/pyx_0_3_patches/pyx@866 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -1,16 +1,8 @@
 PyX
 
-0.4 (????/??/??):
-  TODOs:
-  - graph module:
-      - common bboxes for different graphs
-      - automatic datafile key title
-      - exceptions in drawsymbol & friends...
-      - separate texter out of the axispainter
-      - 3d graphs
-  - canvas module:
-      - default patterns
-      - stroke and fill should support trafos
+0.3.1 (????/??/??)
+  - text module:
+     fix bug in dvi rule code where width was height
 
 0.3 (2003/03/31)
   - examples
