added known bugs
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@870 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 PyX
 
+KNOWN BUGS:
+  text module:
+  - preamble: helper.checkattr(args, allowmulti=texmessage); allowmulti must be a sequence
+  - self.texmessagedefaultpreamble isn't checked (the same for all other defaults)
+
 0.4 (????/??/??):
   - text module:
     fix bug in dvi rule code where width was height
