small textmodule bug fixes
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/branches/pyx_0_3_patches/pyx@871 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,9 @@ PyX
 
 0.3.1 (????/??/??)
   - text module:
-     fix bug in dvi rule code where width was height
+    - fix bug in dvi rule code where width was height
+    - fix preamble attribute checking bug
+    - fix texmessage.hideload pattern search instead of match bug
 
 0.3 (2003/03/31)
   - examples
