--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@ PyX
     - fix bug in dvi rule code where width was height
     - fix preamble attribute checking bug
     - fix texmessage.hideload pattern search instead of match bug
+  - data module:
+    - allow for tuples in lines of the data argument of the data class
 
 0.3 (2003/03/31)
   - examples
