*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@886 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ PyX
   - canvas module:
     - default patterns
     - stroke and fill should support trafos
+    - make dash length available
   - text module:
     - further improve lfs handling
     - missed to rename vbox to parbox in PyX 0.3 -> do it!
