--- a/manual/data.tex
+++ b/manual/data.tex
@@ -114,7 +114,7 @@ class \verb|data| by inheritance. When doing so, the methods
 \verb|getcolumnno|, \verb|getcolumn|, and \verb|addcolumn| are
 immediately available and the cooperation with other parts of \PyX{}
 is assured. All what has to be done, is a call to the inherited
-constructor supplying at least a list of data points as the
-\verb|data| keyword argument. A data point itself is a list of floats
-and/or strings. Additionally a title list can be given in the
-\verb|titles| argument.
+constructor supplying at least a sequence of data points as the
+\verb|data| keyword argument. A data point itself is a sequence of
+floats and/or strings. Additionally a sequence of column titles
+(strings) might be given in the \verb|titles| argument.
