correct arrow template calculation for very short paths
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@896 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,8 @@ PyX
     - added back the integral example (prior part of the user manual)
     - small change in vector example (allow for the access to the texrunner)
     - TODO: include examples in source distribution
+  - canvas module:
+    correct arrow template calculation for very short paths
 
 0.3 (2003/03/31)
   - examples
